Checkout template added to and layout issue cleared up

--- a/checkout/static/checkout/checkout.css
+++ b/checkout/static/checkout/checkout.css
@@ -1,4 +1,2 @@
-.checkout-details-blue-border {
-    border-width: 0.75px;
-    color: #1a67d8;;
-}
+
+
